--- a/auction-minimal.html
+++ b/auction-minimal.html
@@ -68,7 +68,7 @@
       .extra-img {
         position: fixed;
         top: 15px;
-        width: 210px; /* Increased from 80px */
+        width: 135px; /* Increased from 80px */
         height: 132px; /* Increased from 80px */
         z-index: 10000;
         border-radius: 15px; /* Adjusted for larger size */
@@ -86,15 +86,15 @@
       /* Logo at top center - smaller */
       .logo-container {
         width: 500px;
-        height: 120px;
+        height: 209px;
         display: flex;
         align-items: center;
         justify-content: center;
       }
 
       .logo-container img {
-        width: 100%;
-        height: 100%;
+        width: 50%;
+        height: 50%;
         object-fit: cover;
         border-radius: 15px;
       }
@@ -629,13 +629,13 @@
 
     <!-- Two extra images - top left and top right -->
     <img
-      src="assets/travelpartner.png"
+      src="assets/metalmarketbhinmal.jpeg"
       alt="Left Sponsor"
       class="extra-img left"
       onerror="this.style.display='none'"
     />
     <img
-      src="assets/black-nish.png"
+      src="assets/metalmarketbhinmal.jpeg"
       alt="Right Sponsor"
       class="extra-img right"
       onerror="this.style.display='none'"
@@ -653,11 +653,10 @@
       <div class="logo-container">
         <img
           id="tournamentLogo"
-          src=""
+          src="assets/metalmarketbhinmallogo.PNG"
           alt="Tournament Logo"
           onerror="this.style.display='none'"
         />
-        <span style="font-size: 30px; color: #4a90e2">🏆</span>
       </div>
 
       <!-- Bottom content sections -->
@@ -1095,7 +1094,7 @@ class MinimalAuctionDisplay {
     // Update logo
     if (data.tournImg) {
       const logo = document.getElementById("tournamentLogo");
-      logo.src = "assets/rrclogo.png";
+      logo.src = "assets/metalmarketbhinmallogo.PNG";
       logo.style.display = "block";
       logo.nextElementSibling.style.display = "none";
     }
