Update API base URL for auction data

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
     <script>
       class FullAuctionDisplay {
         constructor() {
-          this.apiBaseUrl = "https://sportsdecor.somee.com/api/Auction/state/";
+          this.apiBaseUrl = "https://be.sportyfy.in/api/Auction/state/";
           this.tournamentId = this.getTournamentIdFromUrl();
           this.currentData = null;
 
