Update API base URL for auction state

--- a/auction-minimal.html
+++ b/auction-minimal.html
@@ -716,7 +716,7 @@
     <script>
 class MinimalAuctionDisplay {
   constructor() {
-    this.apiBaseUrl = "https://sportsdecor.somee.com/api/Auction/state/";
+    this.apiBaseUrl = "https://be.sportyfy.in/api/Auction/state/";
     this.tournamentId = this.getTournamentIdFromUrl();
     this.currentPlayerId = null;
     this.previousPlayerData = null;
